fix issue in hover search for light and dark mode

--- a/material-overrides/assets/stylesheets/kluster.css
+++ b/material-overrides/assets/stylesheets/kluster.css
@@ -6,6 +6,7 @@
   /* Brand colors */
   --base-grey-50: #e9eff1;
 
+  --primary-green-900: #0E1316;
   --primary-green-800: #1a2428;
   --primary-green-700: #28383e;
   --primary-green-600: #364b54;
@@ -60,6 +61,7 @@
   --md-default-fg-color: var(--dark);
   --md-default-fg-color--light: var(--primary-green-500);
   --md-default-fg-color--lightest: var(--primary-green-500);
+  --md-accent-fg-color--transparent: var(--info-blue-50);
 
   /* Code variables */
   --md-code-bg-color: #242424;
@@ -186,7 +188,7 @@
   --md-default-fg-color--lightest: var(--primary-green-200);
 
   --md-accent-fg-color-light: var(--dark-transparent-70);
-  --md-accent-fg-color--transparent: var(--light-green-transparent-33);
+  --md-accent-fg-color--transparent: var(--primary-green-900);
   --md-accent-bg-color: var(--tertiary-indigo-300);
 
   /* Footer */
@@ -212,6 +214,7 @@
   --banner-link-color: var(--primary-green-300);
   --banner-icon-color: var(--primary-green-300);
   --banner-hover-color: var(--info-blue-600);
+  
   /* Search */
   --search-background-color: var(--dark);
   --search-border-color: var(--dark);
